test/parser/error_recovery_fn.yl
// RUN: compiler %s  2>&1 | filecheck %s
// CHECK: [[# @LINE + 1 ]]:13: error: expected type specifier
fn error(): {
    let y: number = 1.0 + 2.0;
}

fn main(): void {
    1;
}

// CHECK: [[# @LINE + 1 ]]:12: error: expected parameter declaration
fn error2( {
    let y: number = 1.0 + 2.0;
}

fn error3(): void {
    return

// CHECK: [[# @LINE + 2 ]]:1: error: expected expression
// CHECK: [[# @LINE + 1 ]]:1: error: expected '}' at the end of a block
fn pass(): number {
    2;
}

// CHECK: FunctionDecl: main:void
// CHECK-NEXT:   Block
// CHECK-NEXT:     NumberLiteral: '1'
// CHECK-NEXT: FunctionDecl: pass:number
// CHECK-NEXT:   Block
// CHECK-NEXT:     NumberLiteral: '2'
